--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,4 +8,16 @@ build:
   verbosity: minimal
   publish_wap: true
 
-test: off
+test: on
+
+deploy:
+  release: myproduct-v$(appveyor_build_version)
+  provider: GitHub
+  auth_token:
+    secure: /taM0ncqM9BH/Z7KC1o2SCjOMhdOmwf4t1hP3ywoBHVpL6rFTah+xE+z5vC0fXYh # your encrypted token from GitHub
+  artifact: /.*\.nupkg/            # upload all NuGet packages to release assets
+  draft: false
+  prerelease: false
+  on:
+    branch: master                 # release from master branch only
+    appveyor_repo_tag: true        # deploy on tag push only
